# cppdub

./: CMakeLists.txt  CMakeLists.txt.txt
final/include/: effects.h  exceptions.h  generators.h  playback.h  silence.h  utils.h
include/: audio_segment.h  audio_segment_new.h  cppaudioop.h  effects.h  exceptions.h  generators.h  logging_utils.h  playback.h  silence.h  utils.h
lib/ffmpeg/: instructions.txt
lib/portaudio/lib/: portaudio_static_x64.lib
portaudio/lib/: portaudio_x64.exp
src/: audio_segment.cpp  audio_segment_new.cpp  cppaudioop.cpp  effects.cpp  exceptions.cpp  generators.cpp  logging_utils.cpp  playback.cpp  silence.cpp  utils.cpp
